tests/rosetta/transpiler/C/append-a-record-to-the-end-of-a-text-file.c
// Generated by Mochi 0.10.32 on 2025-07-26 05:05 +0700
#include <stdio.h>
#include <string.h>

size_t writeTwo_len;
size_t appendOneMore_len;

const char* * writeTwo() {
    return writeTwo_len = 2, (const char*[]){ "jsmith:x:1001:1000:Joe Smith,Room 1007,(234)555-8917,(234)555-0077,jsmith@rosettacode.org:/home/jsmith:/bin/bash", "jdoe:x:1002:1000:Jane Doe,Room 1004,(234)555-8914,(234)555-0044,jdoe@rosettacode.org:/home/jsmith:/bin/bash" };
}

const char* * appendOneMore(const char* * lines, size_t lines_len) {
    return appendOneMore_len = append_len, append(lines, "xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash");
}

int user_main() {
    const char* *lines = writeTwo();
    size_t lines_len = writeTwo_len;
    lines = appendOneMore(lines, lines_len);
    lines_len = appendOneMore_len;
    if ((lines_len >= 3) && (strcmp(lines[2], "xyz:x:1003:1000:X Yz,Room 1003,(234)555-8913,(234)555-0033,xyz@rosettacode.org:/home/xyz:/bin/bash") == 0)) {
        puts("append okay");
    } else {
        puts("it didn't work");
    }
}

int main(void) {
    user_main();
    return 0;
}
